Eliminate Unnecessary Imports. Fix Z-index for Backgrounds

--- a/src/pages_css/more.css
+++ b/src/pages_css/more.css
@@ -3,7 +3,7 @@
   inset: 0;
   width: 100vw;
   height: 100vh;
-  z-index: -1;
+  z-index: 0;
   pointer-events: none;
   overflow: hidden;
 }
@@ -35,7 +35,7 @@
 
 .cards-wrapper {
     position: absolute;
-    top: 6vh;
+    top: 10vh;
     left: 15vw; 
     display: flex;
     flex-direction: column;
